# Proyecto2_TB2

./: BloqueIndice.cpp  BloqueIndice.h  BloqueLlave.cpp  BloqueLlave.h  CMakeLists.txt  Database.cpp  Database.h  HashTableEntry.cpp  HashTableEntry.h  Idx_Entry.cpp  Idx_Entry.h  Indice.cpp  Indice.h  ProyectoED2.cbp  ProyectoED2.depend  ProyectoED2.layout  bloque.cpp  bloque.h  bloquecampo.cpp  bloquecampo.h  bloqueregistro.cpp  bloqueregistro.h  bloquetabla.cpp  bloquetabla.h  campo.cpp  campo.h  campodatos.cpp  campodatos.h  datafile.cpp  datafile.h  listbloquetablas.cpp  listbloquetablas.h  listcampodatos.cpp  listcampodatos.h  listcampos.cpp  listcampos.h  listregistros.cpp  listregistros.h  listtabla.cpp  listtabla.h  (+13 more)
